<resources>
    <string name="app_name">InventoryApp</string>
    <string name="activity_books">Books</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Books</string>
    <string name="editor_activity_add_new_book">Add a Book</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="book_name">Book</string>
    <string name="hint_book_name">Book</string>
    <string name="book_author">Book</string>
    <string name="hint_book_author">Book</string>
    <string name="price">Price</string>
    <string name="hint_price">Price</string>
    <string name="qty">Quantity</string>
    <string name="hint_qty">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="supplier_name">Supplier</string>
    <string name="hint_supplier_name">Supplier</string>
    <string name="supplier_phone">Supplier Phone Number</string>
    <string name="hint_supplier_phone">Supplier Phone Number</string>

    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="editor_update_book_failed">Error with updating book</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="edit_delete_book_failed">Error with deleting book</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="sale">Sale</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="error_saving">Error with saving book</string>
    <string name="book_saved">book saved with row id:</string>

</resources>
