<?xml version="1.0" encoding="utf-8"?><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/book_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/BookStyle"
            android:layout_width="50dp"
            android:text="@string/activity_books" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            tools:ignore="RtlHardcoded">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_name"
                android:inputType="textCapWords" />
            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_author"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_author"
                android:inputType="textCapWords" />

        </LinearLayout>
    </LinearLayout>

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/BookStyle"
            android:layout_width="wrap_content"
            android:text="@string/qty" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            tools:ignore="RtlHardcoded">

            <Button
                android:id="@+id/plus"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/book_margin"
                android:text="@string/plus"
                android:visibility="visible" />

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_quantity"
                style="@style/EditorFieldStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_qty"
                android:inputType="number" />

            <Button
                android:id="@+id/minus"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/minus" />

        </LinearLayout>
    </LinearLayout>


    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/BookStyle"
            android:layout_width="50dp"
            android:text="@string/price" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            tools:ignore="RtlHardcoded">

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_book_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_price"
                android:inputType="numberDecimal" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/BookStyle"
            android:layout_width="wrap_content"
            android:text="@string/supplier" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            tools:ignore="RtlHardcoded">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/supplier_name"
                android:inputType="textCapWords" />

            <!-- Label -->
            <TextView
                style="@style/BookStyle"
                android:text="@string/supplier" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/BookStyle"
            android:layout_width="51dp"
            android:layout_height="match_parent"
            android:text="@string/supplier_phone" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            tools:ignore="RtlHardcoded">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_phone"
                style="@style/EditorFieldStyle"
                android:autoLink="phone"
                android:hint="@string/hint_supplier_phone"
                android:inputType="phone" />

            <!-- Label -->
            <TextView
                style="@style/BookStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:text="@string/supplier_phone" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
